force-app/main/default/objects/Mapping__c/Mapping__c.object-meta.xml
<CustomObject>
    <label>对应关系</label>
    <nameField>
        <label>Original Code</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>