force-app/main/default/objects/Mapping__c/fields/Mapping_Code__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Code__c</fullName>
    <label>Mapping Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>