force-app/main/default/objects/Mapping__c/fields/Mapping_Description__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Description__c</fullName>
    <label>Mapping Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>