force-app/main/default/objects/Mapping__c/fields/Original_Code_Ext_Code__c.field-meta.xml
<CustomField>
    <fullName>Original_Code_Ext_Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Original Code Ext Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>