force-app/main/default/objects/Mapping__c/fields/Original_Description__c.field-meta.xml
<CustomField>
    <fullName>Original_Description__c</fullName>
    <label>Original Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>