force-app/main/default/objects/Mapping__c/fields/prdln__c.field-meta.xml
<CustomField>
    <fullName>prdln__c</fullName>
    <label>prdln</label>
    <length>255</length>
    <type>Text</type>
</CustomField>