force-app/main/default/objects/Mapping__c/recordTypes/Brand_Code_and_Name_Mapping.recordType-meta.xml
<RecordType>
    <fullName>Brand_Code_and_Name_Mapping</fullName>
    <active>true</active>
    <label>Brand Code and Name Mapping</label>
</RecordType>