force-app/main/default/objects/Mapping__c/recordTypes/Business_Orgnization_and_Name_Mapping.recordType-meta.xml
<RecordType>
    <fullName>Business_Orgnization_and_Name_Mapping</fullName>
    <active>true</active>
    <label>Business Orgnization and Name Mapping</label>
</RecordType>