force-app/main/default/objects/Mapping__c/recordTypes/Business_Scope_and_Product_Line_Mapping.recordType-meta.xml
<RecordType>
    <fullName>Business_Scope_and_Product_Line_Mapping</fullName>
    <active>true</active>
    <label>Business Scope and Product Line Mapping</label>
</RecordType>