force-app/main/default/objects/Mapping__c/recordTypes/GSS_Sales_Region_and_Sales_Region_Mapping.recordType-meta.xml
<RecordType>
    <fullName>GSS_Sales_Region_and_Sales_Region_Mapping</fullName>
    <active>true</active>
    <label>GSS Sales Region and Sales Region Mapping</label>
</RecordType>