force-app/main/default/objects/Mapping__c/recordTypes/Payment_Terms_Mapping.recordType-meta.xml
<RecordType>
    <fullName>Payment_Terms_Mapping</fullName>
    <active>true</active>
    <label>Payment Terms Mapping</label>
</RecordType>