force-app/main/default/objects/Mapping__c/recordTypes/SAP_Product_Line_and_Product_Line_Mapping.recordType-meta.xml
<RecordType>
    <fullName>SAP_Product_Line_and_Product_Line_Mapping</fullName>
    <active>true</active>
    <label>SAP Product Line and Product Line Mapping</label>
</RecordType>