force-app/main/default/objects/Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Original_Name__c</columns>
    <columns>Original_Description__c</columns>
    <columns>Mapping_Code__c</columns>
    <columns>Mapping_Name__c</columns>
    <columns>Mapping_Description__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Mapping__c.Business_Orgnization_and_Name_Mapping,Mapping__c.Business_Scope_and_Product_Line_Mapping</value>
    </filters>
    <label>All</label>
</ListView>